--- a/PumpVisualizer/PumpVisualizer/Views/Report/StatByDay.cshtml
+++ b/PumpVisualizer/PumpVisualizer/Views/Report/StatByDay.cshtml
@@ -53,7 +53,7 @@
 
 <div style="width:21cm; margin: 0 auto;">
     <table id="dataReport" class="table table-condensed table-bordered" style="width:100%; background-color:#fff; border:1px solid black">
-        <thead>
+        <thead style="background-color: #f6f6f6">
             <tr>
                 <th colspan="8" style="text-align:center">
                     <span style="font-weight:normal">Суточный почасовой отчет потребления по </span> @(ViewBag.ObjectName ?? "-")
@@ -89,7 +89,7 @@
             @for (int i = 0; i < Model.Count(); i++)
             {
                 <tr>
-                    <td>
+                    <td style="background-color: #f6f6f6">
                         @Model[i].HourTime.ToString("dd MMM yyг. HH:mm")
 
                     </td>
@@ -104,7 +104,7 @@
                         }
 
                     </td>
-                    <td>
+                    <td style="text-align:right">
                         @if (Model[i].TotalEnergy.HasValue)
                         {
                             @Model[i].TotalEnergy.Value.ToString("0.##0")
@@ -115,7 +115,7 @@
                         }
 
                     </td>
-                    <td>
+                    <td style="text-align:right">
                         @if (i > 0)
                         {
                             if (Model[i].TotalEnergy.HasValue && Model[i - 1].TotalEnergy.HasValue)
@@ -142,7 +142,7 @@
                             <span class="text-muted">нет данных</span>
                         }
                     </td>
-                    <td>
+                    <td style="text-align:right">
                         @if (Model[i].TotalWaterRate.HasValue)
                         {
                             @Model[i].TotalWaterRate.Value.ToString("0.##0")
@@ -153,7 +153,7 @@
                         }
 
                     </td>
-                    <td>
+                    <td style="text-align:right">
                         @if (i > 0)
                         {
                             if (Model[i].TotalWaterRate.HasValue && Model[i - 1].TotalWaterRate.HasValue)
@@ -170,29 +170,30 @@
                             @:-
             }
                     </td>
-                    <td>
+                    <td style="text-align:right">
                         @if (i > 0)
                         {
                             // если есть энергия
                             if (Model[i].TotalEnergy.HasValue && Model[i - 1].TotalEnergy.HasValue)
                             {
                                 double energy = Model[i].TotalEnergy.Value - Model[i - 1].TotalEnergy.Value;
-                                
+
                                 // если есть вода
                                 if (Model[i].TotalWaterRate.HasValue && Model[i - 1].TotalWaterRate.HasValue)
+                                {
+                                    double water = Model[i].TotalWaterRate.Value - Model[i - 1].TotalWaterRate.Value;
+                                    if (water == 0)
                                     {
-                                        double water = Model[i].TotalWaterRate.Value - Model[i - 1].TotalWaterRate.Value;
-                                        if (water == 0)
-                                        {
-                                            @:∞
-                                        }else
-                                        {
-                                            @((energy/water).ToString("0.0###"))
+                                        @:∞
                                         }
-                                    }
                                     else
                                     {
-                                        @:-
+                                        @((energy / water).ToString("0.0###"))
+                                    }
+                                }
+                                else
+                                {
+                                    @:-
                                     }
                             }
                             else
@@ -205,10 +206,11 @@
                             @:-
             }
                     </td>
+
                 </tr>
             }
         </tbody>
-        <tfoot>
+        <tfoot style="background-color: #f6f6f6">
             <tr>
                 <td colspan="8" style="text-align:center">
                     <b>Суммарный расход</b>
@@ -224,17 +226,17 @@
                 </td>
                 <td></td>
             </tr>
-            
+
             <tr>
                 <td></td>
                 <td colspan="2" class="text-center">@energyLose.ToString("0.##0")</td>
                 <td>@energyDateRange.Hours ч. @energyDateRange.Minutes мин.</td>
-                
+
                 <td colspan="2" class="text-center">@waterLose.ToString("0.##0")</td>
                 <td>@waterDateRange.Hours ч. @waterDateRange.Minutes мин.</td>
                 <td></td>
             </tr>
-                
+
         </tfoot>
 
     </table>
