Начало изменений по подсчету суммарного удельного потребления

--- a/PumpVisualizer/PumpVisualizer/Views/Report/StatByDay.cshtml
+++ b/PumpVisualizer/PumpVisualizer/Views/Report/StatByDay.cshtml
@@ -224,7 +224,9 @@
                 <td colspan="3" style="text-align:center">
                     <b>Вода, м<sup>3</sup></b>
                 </td>
-                <td></td>
+                <td style="text-align:center">
+                <b>Уд. расх. кВтч/м<sup>3</sup></b>
+                </td>
             </tr>
 
             <tr>
