--- a/PumpVisualizer/PumpVisualizer/Views/Report/StatByMonth.cshtml
+++ b/PumpVisualizer/PumpVisualizer/Views/Report/StatByMonth.cshtml
@@ -26,6 +26,17 @@
             z-index: 12;
         }
 
+        #dataReport {
+            width: 100%;
+            background-color: #fff;
+            border: 1px solid black;
+        }
+
+
+            #dataReport td, #dataReport th {
+                line-height: 1.1em;
+            }
+
         @@media print {
             #btnExport, #btnBack {
                 display: none;
@@ -52,7 +63,7 @@
 <a id="btnBack" href='@Url.Action("Index","Report")' class="btn btn-default">&larr; Назад</a>
 
 <div style="width:21cm; margin: 0 auto;">
-    <table id="dataReport" class="table table-condensed table-bordered" style="width:100%; background-color:#fff; border:1px solid black">
+    <table id="dataReport" class="table table-condensed table-bordered">
         <thead style="background-color: #f6f6f6">
             <tr>
                 <th colspan="8" style="text-align:center">
